# service-security-posture-hardening

./: .gitignore  LICENCE  README.md  SSPHP_1678205642.tar.gz_report.json  SSPHP_1678207105.tar.gz_report.json  SSPHP_1678207430.tar.gz_report.json  acs.py  build_help_dashboard.py  build_metrics_dashboard.py  config.toml  confreader.py  jinja_replace_dict.py  package.py  package_test_conf_files.py  pdf_parser.py  pdf_parser_tester.py  requirements.txt  ssphp_package.ps1
TA_github_reader/github_reader/: Cargo.toml
TA_github_reader/github_reader/src/: azure.rs  azure_client.rs  github.rs  main.rs  symlinks.rs
TA_github_reader/splunk_rest_client/: Cargo.toml
TA_github_reader/splunk_rest_client/src/: crazy_splunk_x509v1.rs  lib.rs
data_ingester/.deprecated/TA_github_reader/xtask/: Cargo.toml
data_ingester/data_ingester_rust/: Cargo.toml  build.rs  ms_graph.toml
data_ingester/data_ingester_rust/function_zip/: host.json
data_ingester/data_ingester_rust/function_zip/aws/: function.json
data_ingester/data_ingester_rust/function_zip/azure/: function.json
data_ingester/data_ingester_rust/function_zip/m365/: function.json
data_ingester/data_ingester_rust/src/: admin_request_consent_policy.rs  aws.rs  aws_alternate_contact_information.rs  aws_config.rs  aws_ec2.rs  aws_entities_for_policy.rs  aws_iam.rs  aws_kms.rs  aws_policy.rs  aws_s3.rs  aws_s3control.rs  aws_securityhub.rs  aws_trail.rs  azure_functions.rs  azure_rest.rs  conditional_access_policies.rs  directory_roles.rs  dns.rs  groups.rs  keyvault.rs  main.rs  ms_graph.rs  msgraph_data.rs  powershell.rs  roles.rs  security_score.rs  splunk.rs  users.rs
data_ingester/data_ingester_workspace/: Cargo.toml  README.md  bacon.toml
data_ingester/data_ingester_workspace/.cargo/: audit.toml  config.toml
data_ingester/data_ingester_workspace/data_ingester_aws/: Cargo.toml  build.rs
data_ingester/data_ingester_workspace/data_ingester_aws/src/: aws.rs  aws_alternate_contact_information.rs  aws_config.rs  aws_ec2.rs  aws_entities_for_policy.rs  aws_iam.rs  aws_kms.rs  aws_organizations.rs  aws_policy.rs  aws_route53.rs  aws_s3.rs  aws_s3control.rs  aws_securityhub.rs  aws_trail.rs  lib.rs
data_ingester/data_ingester_workspace/data_ingester_axum_entrypoint/: Cargo.toml
data_ingester/data_ingester_workspace/data_ingester_axum_entrypoint/function_zip/: host.json
data_ingester/data_ingester_workspace/data_ingester_axum_entrypoint/src/: app_state.rs  azure_functions.rs  azure_request_response.rs  main.rs  runner.rs
data_ingester/data_ingester_workspace/data_ingester_azure/: Cargo.toml
data_ingester/data_ingester_workspace/data_ingester_azure/src/: lib.rs
data_ingester/data_ingester_workspace/data_ingester_azure_dev_ops/: Cargo.toml
data_ingester/data_ingester_workspace/data_ingester_azure_dev_ops/src/: ado_dev_ops_client.rs  ado_metadata.rs  ado_response.rs  ado_splunk.rs  azure_dev_ops_client_oauth.rs  azure_dev_ops_client_pat.rs  entrypoint.rs  lib.rs  test_utils.rs
data_ingester/data_ingester_workspace/data_ingester_azure_dev_ops/test/: advsec.dev.azure.com_aktest0831__apis_management_enablement?api-version=7.2-preview.1&includeAllProperties=true.json  advsec.dev.azure.com_aktest0831_foo__apis_management_enablement?api-version=7.2-preview.3&includeAllProperties=true.json  auditservice.dev.azure.com_aktest0831__apis_audit_streams?api-version=7.2-preview.1.json  dev.azure.com_aktest0831__apis_projects?api-version=7.2-preview.4.json  dev.azure.com_aktest0831__apis_securitynamespaces?api-version=7.2-preview.1.json  dev.azure.com_aktest0831_foo__apis_build_generalsettings?api-version=7.2-preview.1.json  dev.azure.com_aktest0831_foo__apis_git_policy_configurations?api-version=7.2-preview.1.json  dev.azure.com_aktest0831_foo__apis_git_repositories?api-version=7.2-preview.1.json  dev.azure.com_aktest0831_foo__apis_policy_configurations?api-version=7.2-preview.1.json  vssps.dev.azure.com_aktest0831__apis_graph_groups?api-version=7.2-preview.1.json  vssps.dev.azure.com_aktest0831__apis_graph_serviceprincipals?api-version=7.2-preview.1.json  vssps.dev.azure.com_aktest0831__apis_graph_users?api-version=7.2-preview.1.json  vssps.dev.azure.com_aktest0831__apis_tokens_pats?api-version=7.2-preview.1.json
data_ingester/data_ingester_workspace/data_ingester_azure_rest/: Cargo.toml
data_ingester/data_ingester_workspace/data_ingester_azure_rest/src/: azure_rest.rs  lib.rs  resource_graph.rs
data_ingester/data_ingester_workspace/data_ingester_censys/: Cargo.toml
data_ingester/data_ingester_workspace/data_ingester_censys/src/: lib.rs
data_ingester/data_ingester_workspace/data_ingester_financial_business_partners/: Cargo.toml
data_ingester/data_ingester_workspace/data_ingester_financial_business_partners/src/: fbp_results.rs  lib.rs  validator.rs
data_ingester/data_ingester_workspace/data_ingester_functions_entrypoint/: Cargo.toml  build.rs
data_ingester/data_ingester_workspace/data_ingester_functions_entrypoint/src/: main.rs  (+1 more)
data_ingester/data_ingester_workspace/data_ingester_github/: Cargo.toml  build.rs  manifest.html
data_ingester/data_ingester_workspace/data_ingester_ms_graph/: Cargo.toml  build.rs  ms_graph.toml
data_ingester/data_ingester_workspace/data_ingester_ms_powershell/: Cargo.toml
data_ingester/data_ingester_workspace/data_ingester_mssql/: Cargo.toml
data_ingester/data_ingester_workspace/data_ingester_qualys/: Cargo.toml
data_ingester/data_ingester_workspace/data_ingester_sarif/: Cargo.toml
data_ingester/data_ingester_workspace/data_ingester_sonar_cloud/: Cargo.toml
data_ingester/data_ingester_workspace/data_ingester_splunk/: Cargo.toml
data_ingester/data_ingester_workspace/data_ingester_splunk_search/: Cargo.toml
data_ingester/data_ingester_workspace/data_ingester_supporting/: Cargo.toml
data_ingester/data_ingester_workspace/data_ingester_terraform/: Cargo.toml
data_ingester/data_ingester_workspace/data_ingester_threagile/: Cargo.toml
data_ingester/data_ingester_workspace/egui_frontend/: Cargo.toml
data_ingester/data_ingester_workspace/use_case_runner/: Cargo.toml
(+1385 files in other folders)
