[package]
name = "github_reader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
# TODO Change back to public release once https://github.com/Azure/azure-sdk-for-rust/pull/1274 is merged
azure_core = { version = "*", features = ["enable_reqwest_rustls"], default_features = false, path = "/home/a/repos/azure-sdk-for-rust/sdk/core"}
azure_identity = { version = "*", features = ["enable_reqwest_rustls"], default_features = false, path = "/home/a/repos/azure-sdk-for-rust/sdk/identity"}
azure_mgmt_security = {version = "*", path ="/home/a/repos/azure-sdk-for-rust/services/mgmt/security", features = ["package-composite-v3", "enable_reqwest_rustls"], default_features = false}
azure_mgmt_subscription = { version = "*", features = ["package-2021-10", "enable_reqwest_rustls"], default_features = false, path ="/home/a/repos/azure-sdk-for-rust/services/mgmt/subscription"}
azure_mgmt_resources = { version = "*", features = ["package-resources-2021-04", "enable_reqwest_rustls"], default_features = false, path ="/home/a/repos/azure-sdk-for-rust/services/mgmt/resources"}
clap = { version = "*"}
futures = "*"
modular_input = {path = "../modular_input" }
octorust = "*"
reqwest = { version ="*", features = ["rustls-tls"], default-features = false}
serde = {version = "*", features = ["derive"]}
serde_json = "*"
splunk_rest_client = { path = "../splunk_rest_client" }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "std", "alloc", "fmt", "registry", "ansi"], default-features = false }
