[package]
name = "splunk_rest_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version ="*", features = ["rustls-tls", "json"], default-features = false}
tokio = { version = "1.0", features = ["full"] }
serde_json = "*"
anyhow = "1.0"
rustls = {version = "0.20.1", features = ["dangerous_configuration"]}
serde = { version = "1.0", features = ["derive"] }
