[package]
name = "msgraph_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# graph-http = { path = "/home/a/repos/graph-rs-sdk/graph-http", features = ["rustls-tls"] }
# graph-rs-sdk = { path = "/home/a/repos/graph-rs-sdk", features = ["rustls-tls"] }
anyhow = { version = "*", features=["backtrace"]}
azure_core = { version = "*", default-features = false, features = ["enable_reqwest_rustls"]}
azure_identity = { version = "*", default-features = false, features = ["enable_reqwest_rustls", "client_certificate"]}
azure_mgmt_authorization = { version = "*", default-features = false, features = ["enable_reqwest_rustls", "package-2022-04-01"]}
azure_mgmt_subscription = { version = "*", default-features = false, features = ["enable_reqwest_rustls", "package-2021-10"]}
azure_security_keyvault = { version = "*", default-features = false,  features = ["enable_reqwest_rustls"]}
bytes = "*"
dyn-fmt = "*"
futures = "*"
graph-rs-sdk = { git = "https://github.com/akinnane/graph-rs-sdk.git", features = ["rustls-tls"] }
graph-core = { git = "https://github.com/akinnane/graph-rs-sdk.git" }
graph-http = { git = "https://github.com/akinnane/graph-rs-sdk.git" }
hostname = "*"
hyper = "*"
itertools = "*"
memory-stats = "1.0.0"
openssl-sys = {version = "*", features=["vendored"]}
regex = "*"
reqwest = {version = "*", features = ["rustls-tls"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "*"
serde_with = "*"
tokio = { version = "1.25.0", features = ["full"] }
toml = "*"
trust-dns-proto = "*"
trust-dns-resolver = { version = "*", features = ["dns-over-rustls"] }
url = "*"
warp = "*"
aws-config = { version = "1.1.1", features = ["behavior-version-latest"] }
aws-sdk-iam = "1.7.0"
aws-sdk-account = "1.7.0"
aws-credential-types = "*"
csv = "*"

[dependencies.uuid]
version = "1.4.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[build-dependencies]
toml = "*"


[profile.release]
strip = true
# lto = true


[build]
rustflags = ["-Z", "threads=8"]

