[workspace]
resolver = "2"
members = [
    "data_ingester_aws",
    "data_ingester_azure",
    "data_ingester_azure_rest",
    "data_ingester_functions_entrypoint",
    "data_ingester_github",
    "data_ingester_ms_graph",
    "data_ingester_ms_powershell",
    "data_ingester_splunk",
    "data_ingester_supporting",
    ]

[workspace.lints.clippy]
unwrap_used = "warn"

[profile.release]
# strip = true
# lto = true

[patch.crates-io]
# Nightly build fails due to removal of the unstable stdsimd feature
# https://github.com/zowens/crc32c/issues/51
crc32c = { git = "https://github.com/zowens/crc32c", branch="master" }
