[workspace]
resolver = "2"
members = [
    "data_ingester_aws",
    "data_ingester_axum_entrypoint",
    "data_ingester_azure",
    "data_ingester_azure_rest",
    "data_ingester_github",
    "data_ingester_ms_graph",
    "data_ingester_ms_powershell",
    "data_ingester_qualys", "data_ingester_sarif",
    "data_ingester_splunk",
    "data_ingester_splunk_search",
    "data_ingester_supporting",
    "data_ingester_threagile",
    ]

[workspace.lints.clippy]
unwrap-used = "warn"

[workspace.lints.rust]
single_use_lifetimes = "warn"
unused_import-braces = "warn"
unused_results = "warn"

[profile.release]
# lto = true
