        [package]
name = "data_ingester_aws"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "*", features=["backtrace"]}
aws-config = { version = "*", features = ["behavior-version-latest"] }
aws-credential-types = "*"
aws-sdk-accessanalyzer = "*"
aws-sdk-account = "*" #"1.7.0"
aws-sdk-cloudtrail = "*"
aws-sdk-config = "*"
aws-sdk-ec2 = "*"
aws-sdk-iam = "*"
aws-sdk-kms = "*"
aws-sdk-s3 = "*"
aws-sdk-s3control = "*"
aws-sdk-securityhub = "*"
aws-sdk-organizations = "*"
aws-sdk-sts = "*"
aws-sdk-route53 = "*"
aws-smithy-types = "*"
csv = "*"
data_ingester_splunk = { path = "../data_ingester_splunk" }
data_ingester_supporting = { path = "../data_ingester_supporting" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "*"
urlencoding = "*"
tracing = "*"
tracing-subscriber = "*"
tracing-test = "*"
hickory-resolver = "*"
hickory-proto = {version = "*", features = ["serde-config"]}


[dev-dependencies]
tokio = { version = "1", features = ["full"] }

[lints]
workspace = true
