        [package]
name = "data_ingester_aws"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1", features=["backtrace"]}
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-credential-types = "1"
aws-sdk-accessanalyzer = "1"
aws-sdk-account = "1"
aws-sdk-cloudtrail = "1"
aws-sdk-config = "1"
aws-sdk-ec2 = "1"
aws-sdk-iam = "1"
aws-sdk-kms = "1"
aws-sdk-s3 = "1"
aws-sdk-s3control = "1"
aws-sdk-securityhub = "1"
aws-sdk-organizations = "1"
aws-sdk-sts = "1"
aws-sdk-route53 = "1"
aws-smithy-types = "1"
csv = "1"
data_ingester_splunk = { path = "../data_ingester_splunk" }
data_ingester_supporting = { path = "../data_ingester_supporting" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
urlencoding = "2"
tracing = "0"
hickory-resolver = "0"
hickory-proto = {version = "0", features = ["serde-config"]}


[dev-dependencies]
tokio = { version = "1", features = ["full"] }

[lints]
workspace = true

[features]
live_tests = []