        [package]
name = "data_ingester_aws"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1", features=["backtrace"]}
aws-config = { version = "1", default-features=false, features = ["behavior-version-latest", "rt-tokio", "default-https-client"] }
aws-credential-types = { version = "1", default-features=false, features = [] }
aws-sdk-accessanalyzer = { version = "1", default-features=false, features = ["behavior-version-latest", "rt-tokio",] }
aws-sdk-account = { version = "1", default-features=false, features = ["behavior-version-latest", "rt-tokio", ] }
aws-sdk-cloudtrail = { version = "1", default-features=false, features = ["behavior-version-latest", "rt-tokio"] }
aws-sdk-config = { version = "1", default-features=false, features = ["behavior-version-latest", "rt-tokio"] }
aws-sdk-ec2 = { version = "1", default-features=false, features = ["behavior-version-latest","rt-tokio",] }
aws-sdk-iam = { version = "1", default-features=false, features = ["behavior-version-latest", "rt-tokio", ] }
aws-sdk-kms =      { version = "1", default-features=false, features = ["behavior-version-latest", "rt-tokio", ] }
aws-sdk-s3 = { version = "1", default-features=false, features = ["behavior-version-latest", "sigv4a", "rt-tokio", "default-https-client"] }
aws-sdk-s3control = { version = "1", default-features=false, features = ["behavior-version-latest",  "rt-tokio",] }
aws-sdk-securityhub = { version = "1", default-features=false, features = ["behavior-version-latest","rt-tokio",] }
aws-sdk-organizations = { version = "1", default-features=false, features = ["behavior-version-latest", "rt-tokio",] }
aws-sdk-sts = { version = "1", default-features=false, features = ["behavior-version-latest", "sigv4a", "rt-tokio", "default-https-client"] }
aws-sdk-route53 = { version = "1", default-features=false, features = ["behavior-version-latest",  "rt-tokio",] }
aws-smithy-types = { version = "1", default-features=false, features = [] }
csv = "*"
data_ingester_splunk = { path = "../data_ingester_splunk" }
data_ingester_supporting = { path = "../data_ingester_supporting" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
urlencoding = "2"
tracing = "0"
hickory-resolver = "0.25.0-alpha.4"
hickory-proto = {version = "0.25.0-alpha.4", features = ["serde"]}


[dev-dependencies]
tokio = { version = "1", features = ["full"] }

[lints]
workspace = true

[features]
live_tests = []