[package]
name = "data_ingester_azure_rest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "*", features=["backtrace"]}
async-recursion = "*"
azure_core = { version = "*", default-features = false, features = ["enable_reqwest_rustls"]}
azure_identity = { version = "*", default-features = false, features = ["enable_reqwest_rustls", "client_certificate"]}
azure_mgmt_authorization = { version = "*", default-features = false, features = ["enable_reqwest_rustls", "package-2022-04-01"]}
azure_mgmt_subscription = { version = "*", default-features = false, features = ["enable_reqwest_rustls", "package-2021-10"]}
data_ingester_splunk = { path = "../data_ingester_splunk" }
data_ingester_supporting = { path = "../data_ingester_supporting" }
dyn-fmt = "*"
futures = "*"
reqwest = {version = "*", features = ["rustls-tls", "http2"], default-features = false}
serde = { version = "1.0", features = ["derive"] }
serde_json = "*"
tokio = { version = "1.25.0", features = ["full"] }
url = "*"

[lints]
workspace = true
