[package]
name = "data_ingester_censys"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
data_ingester_splunk = { path = "../data_ingester_splunk" }
data_ingester_supporting = { path = "../data_ingester_supporting" }
reqwest = {version = "0", features = ["rustls-tls", "json"], default-features = false}
serde = {version = "1", features = ["derive"]}
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0"
valuable = { version = "*", features = ["derive"]}
hickory-resolver = "0.25.0-alpha.4"
hickory-proto = {version = "0.25.0-alpha.4", features = ["serde"]}
futures = "*"

[lints]
workspace = true
