[package]
name = "data_ingester_financial_business_partners"
version = "0.1.0"
edition = "2021"


[dependencies]
anyhow = { version = "1", features=["backtrace"]}
data_ingester_splunk = { path = "../data_ingester_splunk" }
data_ingester_splunk_search = { path = "../data_ingester_splunk_search" }
data_ingester_supporting = { path = "../data_ingester_supporting" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0"
tiberius = {version="*", default-features=false, features=["tds73", "rustls", "sql-browser-tokio"]}
tokio-util = { version="0.7.13", features=["full", "compat"] }
futures= "*"
rand = "*"

[lints]
workspace = true

[features]
live_tests = []