[package]
name = "data_ingester_github"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1", features=["backtrace"]}
data_ingester_splunk = { path = "../data_ingester_splunk" }
data_ingester_supporting = { path = "../data_ingester_supporting" }
octocrab = "*"
serde = {version = "1", features = ["derive"]}
serde_json = "1"
tracing = "0"
tracing-subscriber = { version = "0.3", features = ["env-filter", "std", "alloc", "fmt", "registry", "ansi"], default-features = false }
tokio = { version = "1.25.0", features = ["full"] }
http = "1.0.0"
jsonwebtoken = "*"
secrecy = "*"
http-body-util = "*"
futures = "*"
itertools = "*"
regex = "*"
url = "*"
graphql_client = "*"
[lints]
workspace = true

# [lints.rust]
# missing_docs = "warn"
# single-use-lifetimes = "warn"
