[package]
name = "data_ingester_github"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1", features=["backtrace"]}
bytes = "1"
data_ingester_splunk = { path = "../data_ingester_splunk" }
data_ingester_sarif = { path = "../data_ingester_sarif" }
data_ingester_supporting = { path = "../data_ingester_supporting" }
octocrab = "0"
serde = {version = "1", features = ["derive"]}
serde_json = "1"
tracing = "0"
tracing-subscriber = { version = "0", features = ["env-filter", "std", "alloc", "fmt", "registry", "ansi"], default-features = false }
tokio = { version = "1", features = ["full"] }
http = "1"
jsonwebtoken = "9"
secrecy = "0"
http-body-util = "0"
futures = "0"
itertools = "0"
regex = "1"
url = "2"
graphql_client = "0"

[lints]
workspace = true

[features]
live_tests = []