[package]
name = "data_ingester_github"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1", features=["backtrace"]}
base64 = "0.22"
bytes = "1"
clap = { version="4", features=["derive"]}
csv = "1"
data_ingester_financial_business_partners = { path = "../data_ingester_financial_business_partners" }
data_ingester_sarif = { path = "../data_ingester_sarif" }
data_ingester_splunk = { path = "../data_ingester_splunk" }
data_ingester_splunk_search = { path = "../data_ingester_splunk_search" }
data_ingester_supporting = { path = "../data_ingester_supporting" }
futures = "0"
graphql_client = "0"
http = "1"
http-body-util = "0"
itertools = "0"
jsonwebtoken = "9"
octocrab = "0"
regex = "1"
secrecy = "0"
serde = {version = "1", features = ["derive"]}
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
tracing = "0"
tracing-subscriber = { version = "0", features = ["env-filter", "std", "alloc", "fmt", "registry", "ansi", "valuable"], default-features = false }
url = "2"

[lints]
workspace = true

[features]
live_tests = []

[[bin]]
name = "update_custom_properties_from_csv"
path = "src/update_custom_properties_from_csv.rs"
test = false
bench = false
