[package]
name = "data_ingester_ms_graph"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "*", features=["backtrace"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "*"
tokio = { version = "1.25.0", features = ["full"] }
graph-rs-sdk = { git = "https://github.com/akinnane/graph-rs-sdk.git", features = ["rustls-tls"] }
graph-core = { git = "https://github.com/akinnane/graph-rs-sdk.git" }
graph-http = { git = "https://github.com/akinnane/graph-rs-sdk.git" }
reqwest = {version = "*", features = ["rustls-tls"]}
url = "*"
futures = "*"
toml = "*"
trust-dns-proto = "*"
trust-dns-resolver = { version = "*", features = ["dns-over-rustls"] }
data_ingester_splunk = { path = "../data_ingester_splunk" }
data_ingester_supporting = { path = "../data_ingester_supporting" }
data_ingester_azure_rest = { path = "../data_ingester_azure_rest" }
serde_with = "*"
azure_mgmt_authorization = { version = "*", default-features = false, features = ["enable_reqwest_rustls", "package-2022-04-01"]}
regex = "*"

[build-dependencies]
toml = "*"

[dev-dependencies]
data_ingester_supporting = { path = "../data_ingester_supporting" }
tokio = { version = "1.25.0", features = ["full"] }