[package]
name = "data_ingester_ms_powershell"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "*", features=["backtrace"]}
data_ingester_splunk = { path = "../data_ingester_splunk"}
data_ingester_supporting = { path = "../data_ingester_supporting"}
serde = { version = "1.0", features = ["derive"] }
serde_json = "*"

[dev-dependencies]
data_ingester_supporting = { path = "../data_ingester_supporting" }
tokio = { version = "1.37.0", features = ["full"] }

[lints]
workspace = true
