[package]
name = "data_ingester_ms_powershell"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1", features=["backtrace"]}
data_ingester_splunk = { path = "../data_ingester_splunk"}
data_ingester_supporting = { path = "../data_ingester_supporting"}
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0"

[dev-dependencies]
data_ingester_supporting = { path = "../data_ingester_supporting" }
tokio = { version = "1.39.3", features = ["full"] }

[lints]
workspace = true

[features]
live_tests = []